Include changed privacy settings & information

--- a/templates/template_author.html
+++ b/templates/template_author.html
@@ -72,17 +72,17 @@
                 });
             });
         </script>
-       
+        
         <!-- Icon-Toggle: glyphicon-checked/glyphicon-uncheck -->
         <script type="text/javascript">
             $('.menu-toggle').click( function(){
             $(this).find('span').toggleClass('glyphicon glyphicon-unchecked').toggleClass('glyphicon glyphicon-check');
             });
         </script>
-       
+        
         <!--  ==== Custom js for author.html highlight toggle ==== -->
         <script type="text/javascript" src="resources/js/sal-common.js"/>
-
+        
         <!-- ==== Mobil-View: Hide opened collapsed menu after clicking elsewhere on page ==== -->
         <script type="text/javascript">
                 $(document).on('click',function(){
@@ -96,7 +96,7 @@
         </script>
         
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -119,8 +119,8 @@
             <p>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
             </p>
-        </noscript>
+        </noscript>-->
         <!-- End Piwik Code -->
-
+        
     </body>
 </html>
