--- a/templates/template_authors.html
+++ b/templates/template_authors.html
@@ -114,7 +114,7 @@
                       $.facetelize(settings);
                 });
         </script>
-
+        
         <!-- ==== Mobil-View: Hide opened collapsed menu after clicking elsewhere on page ==== -->
         <script type="text/javascript">
             $(document).on('click',function(){
@@ -138,9 +138,9 @@
             });
         });
         </script>
-
+        
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -163,8 +163,8 @@
             <p>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
             </p>
-        </noscript>
+        </noscript>-->
         <!-- End Piwik Code -->
-
+        
     </body>
 </html>
