--- a/templates/template_basic.html
+++ b/templates/template_basic.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/> 
-<!--        <style>
+        <!--        <style>
             /*Main stylesheet for Backtop jQuery Plugin */
             #backTop{
                 width:35px;
@@ -46,10 +46,10 @@
         </style>
 -->
         <link rel="stylesheet" type="text/css" href="resources/css/style_default.css"/>
-
+        
         <!-- ==== Scripts ==== -->
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -67,7 +67,7 @@
             g.src=u+'js/';
             s.parentNode.insertBefore(g,s);
           })();
-        </script>
+        </script>-->
         <!-- End Piwik Code -->
         
         <!-- ==== favIcon ==== -->
@@ -103,7 +103,7 @@
             <!-- ==== Core JavaScript ==== -->
             <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"/>
             <script async="async" type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"/>
-<!--        <script async="async" type="text/javascript" src="resources/js/jquery.backTop.min.js"/>-->
+            <!--        <script async="async" type="text/javascript" src="resources/js/jquery.backTop.min.js"/>-->
             
             <!-- ==== jQuery Back to top ==== -->
             <a id="backTop"/>
@@ -153,12 +153,12 @@
             <script type="text/javascript">
             $(".navbar-collapse").css({ maxHeight: $(window).height() - $(".navbar-header").height() + "px" });
             </script>
-
+            
             <!-- - - once more piwik code, in case the browser does not support script - - --> 
-            <noscript>
+            <!-- <noscript>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
-            </noscript>
-
+            </noscript>-->
+            
             <div id="push"/>
         </div>
         <h2/>
@@ -167,6 +167,6 @@
                 <div data-template="config:footer"/>
             </div>
         </div>
-
+        
     </body>
 </html>
