--- a/templates/template_guidelines.html
+++ b/templates/template_guidelines.html
@@ -64,9 +64,9 @@
                  });
              });
             </script>
-
-        <!-- ==== Scroll an anchor into view if we have one ==== -->
-        <script type="text/javascript">
+            
+            <!-- ==== Scroll an anchor into view if we have one ==== -->
+            <script type="text/javascript">
             $(document).ready(function () {
                 if (window.location.hash) { scrollIntoView(window.location.hash);}
             });
@@ -119,9 +119,9 @@
                 <div data-template="config:footer"/>
             </div>
         </div>
-
+        
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -144,8 +144,8 @@
             <p>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
             </p>
-        </noscript>
+        </noscript>-->
         <!-- End Piwik Code -->
-
+        
     </body>
 </html>
