--- a/templates/template_lemmata.html
+++ b/templates/template_lemmata.html
@@ -101,7 +101,7 @@
                       $.facetelize(settings);
                     });
         </script>
-              
+        
         <!-- Icon-Toggle: glyphicon-checked/glyphicon-uncheck -->
         <script type="text/javascript">
             $('.menu-toggle').click( function(){
@@ -132,9 +132,9 @@
                 });
             });
         </script>
-
+        
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -157,8 +157,8 @@
             <p>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
             </p>
-        </noscript>
+        </noscript>-->
         <!-- End Piwik Code -->
-
+        
     </body>
 </html>
