--- a/templates/template_workingPapers.html
+++ b/templates/template_workingPapers.html
@@ -35,7 +35,7 @@
         <meta name="msapplication-TileImage" content="resources/favicons/mstile-144x144.png"/>
         <meta name="theme-color" content="#ffffff"/>
         
-     </head>
+    </head>
     <body id="body">
         <div id="wrap">
             <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -84,7 +84,7 @@
                     }
                 });
             </script>
-
+            
             
             <div id="push"/>
         </div>
@@ -94,9 +94,9 @@
                 <div data-template="config:footer"/>
             </div>
         </div>
-
+        
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -119,8 +119,8 @@
             <p>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
             </p>
-        </noscript>
+        </noscript>-->
         <!-- End Piwik Code -->
-
+        
     </body>
 </html>
