--- a/templates/template_index.html
+++ b/templates/template_index.html
@@ -11,7 +11,7 @@
         <!-- ==== CSS ==== -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
-<!--    <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/> -->
+        <!--    <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/> -->
         <style>
             /*Main stylesheet for Backtop jQuery Plugin */
             #backTop{
@@ -44,10 +44,10 @@
             }
         </style>
         <link rel="stylesheet" type="text/css" href="resources/css/style_default.css"/>
-
+        
         <!-- ==== Scripts ==== -->
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -65,7 +65,7 @@
             g.src=u+'js/';
             s.parentNode.insertBefore(g,s);
           })();
-        </script>
+        </script>-->
         <!-- End Piwik Code -->
         
         <!-- ==== favIcon ==== -->
@@ -135,11 +135,11 @@
             <script type="text/javascript">
             $(".navbar-collapse").css({ maxHeight: $(window).height() - $(".navbar-header").height() + "px" });
             </script>
-
+            
             <!-- - - once more piwik code, in case the browser does not support script - - --> 
-            <noscript>
+            <!--<noscript>
                 <img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/>
-            </noscript>
+            </noscript>-->
             
             <div id="push"/>
         </div>
@@ -149,6 +149,6 @@
                 <div data-template="config:footer"/>
             </div>
         </div>
-
+        
     </body>
 </html>
