--- a/templates/template_works.html
+++ b/templates/template_works.html
@@ -8,7 +8,7 @@
         <title data-template="config:meta-title"/>
         <link rel="canonical" data-template="config:canonical-url"/>
         <link rel="alternative" data-template="config:hreflang-url"/>
-
+        
         <!-- ==== Bootsrap CSS!  ==== -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         
@@ -55,7 +55,7 @@
                 <div data-template="config:footer"/>
             </div>
         </div>
-
+        
         <!-- ==== JavaScript placed at the end of the document so the pages load faster ==== -->
         <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"/>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"/>
@@ -158,10 +158,10 @@
                 });
             });
         </script>
-
+        
         <!-- ==== Piwik for visitor stats ==== -->
         <!-- - - Piwik for visitor stats (modified to enable caching and compression) - - -->
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
           var _paq = _paq || [];
           _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
           _paq.push(["setCookieDomain", "*.salamanca.school"]);
@@ -180,8 +180,8 @@
             s.parentNode.insertBefore(g,s);
           })();
         </script>
-        <noscript><p><img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/></p></noscript>
+        <noscript><p><img src="//stats.adwmainz.net/piwik.php?idsite=20" style="border:0;" alt=""/></p></noscript>-->
         <!-- End Piwik Code -->
-
+        
     </body>
 </html>
