Change icon for legal info page; add respective button to Mirador view.

--- a/templates/template_mirador.html
+++ b/templates/template_mirador.html
@@ -114,6 +114,15 @@
                                 "aria-hidden": "true",
                                 "href": "#no-op"
                             }
+                        },
+                        {
+                            "label": "Privacy &amp; Legal Information",
+                            "iconClass": "fa fa-bell-o",
+                            "attributes": {
+                                "id": "legal",
+                                "aria-hidden": "true",
+                                "href": "https://www.salamanca.school/legal.html"
+                            }
                         }
 // we could close the popup window from here, and eliminate its titlebar, thus saving space. But then we have nothing to grab for dragging the window around...
 // ,
