Change 'Privacy & Legal Information' icon to lock.

--- a/templates/template_mirador.html
+++ b/templates/template_mirador.html
@@ -117,7 +117,7 @@
                         },
                         {
                             "label": "Privacy &amp; Legal Information",
-                            "iconClass": "fa fa-bell-o",
+                            "iconClass": "fa fa-lock",
                             "attributes": {
                                 "id": "legal",
                                 "aria-hidden": "true",
