--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -77,7 +77,7 @@
 
         <!-- ==== Scroll an anchor into view if we have one ==== -->
         <script type="text/javascript">
-            $('a')
+            $('a').not('.note-teaser')
                 .filter(function() {
 //                    console.log("Click on a@href=" + $(this).attr('href') + '... (window.location.href being ' + window.location.href + '.)');
 //                    console.log((window.location.origin + window.location.pathname + window.location.search
