Adjust rendering of original elements in all (blueish) links.

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -523,7 +523,7 @@ a .edited, a .expan, a .reg, a .corr{
     color:#777777;
 }
 
-.marginal a.collapsed .original {
+a .original {
     color:#BA55D3;
 }
 
