Add more compatible icon for marginal note toggling.

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -532,7 +532,7 @@ a .original {
 }
 
 .marginal a.collapsed:after {
-    content: '...⮛';
+    content: '...⌄';
     margin-top:-1em;
     position:absolute;
 }
