--- a/templates/template_mirador.html
+++ b/templates/template_mirador.html
@@ -80,6 +80,12 @@
                 return 'en'
         };
 
+        function setZipUrl() {
+            document.getElementById('downloadImages').href = "https://c104-131.cloud.gwdg.de/sal-facs/" + getUrlParams( 'wid' ) + "/" + getUrlParams( 'wid' ) + ".zip";  // update Download button
+//          $('#viewer')[0].getElementById('downloadImages').href = "http://facs.salamanca.school/" + getUrlParams( 'wid' ) + "/" + getUrlParams( 'wid' ) + ".zip";  // update Download button
+            document.getElementById('downloadImages').setAttribute('download', getUrlParams( 'wid' ) + ".zip");  // update Download button
+        };
+
         var MyObjects = {};
 
         $(document).ready(function(){
@@ -143,6 +149,8 @@
                 data: <span data-template="iiif:MiradorData">[{"bla": "bleh"}]</span>,
                 windowObjects : <span data-template="iiif:MiradorWindowObject">[{"bla": "bleh"}]</span>
             });
+
+            setTimeout( setZipUrl, 100 );
 // TODO: Binding to events happens in the parent html file (which includes the present file in an iframe).
 // We wait for mirador's full initialization here before calling the binding function.
 // Probably this can happen in more elegant, i.e. event-driven way.
