Render ornaments as short horizontal line.

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -537,6 +537,10 @@ a .original {
     position:absolute;
 }
 
+hr.ornament {
+    width: 30%;
+}
+
 .pagination, .pageNumbers {
 	float: left;
 /*	margin-left: -12%;*/
