Open Mirador view in new tab

--- a/templates/template_works.html
+++ b/templates/template_works.html
@@ -93,7 +93,7 @@
                                   		    '&lt;a class="workVolume" href="&lt;%= obj.vol7 %&gt;"&gt;&lt;%= obj.vol7Cont %&gt;&lt;/a&gt;' +
                                   		    '&lt;a class="workVolume" href="&lt;%= obj.vol8 %&gt;"&gt;&lt;%= obj.vol8Cont %&gt;&lt;/a&gt;' +
                                         '&lt;/p&gt;' +
-                              		    '&lt;a title="&lt;%=obj.facsAttrib %&gt;" class="workImages pull-right" href="&lt;%= obj.workImages %&gt;"&gt;&lt;i class="fa fa-file-text-o" &gt;&lt;/i&gt; &lt;%=obj.facsAttrib %&gt;&lt;/a&gt;' +
+                              		    '&lt;a title="&lt;%=obj.facsAttrib %&gt;" class="workImages pull-right" target="_blank" rel="noopener noreferrer" href="&lt;%= obj.workImages %&gt;"&gt;&lt;i class="fa fa-file-text-o" &gt;&lt;/i&gt; &lt;%=obj.facsAttrib %&gt;&lt;/a&gt;' +
                                         '&lt;br/&gt;' +
                                         '&lt;a title="&lt;%=obj.titAttrib %&gt;" class="workDetails pull-right" href="&lt;%= obj.workDetails %&gt;"&gt;&lt;i class="fa fa-file-text-o" &gt;&lt;/i&gt; &lt;%=obj.titAttrib %&gt;&lt;/a&gt;' +
                               		    '&lt;a style="display: none;"  &gt;&lt;%= obj.sortName %&gt;&lt;/a&gt;' +
