Delete 'proper title' fields (tei:title/@type['245a']) and adjust rendering of catalogue records.

--- a/templates/template_mirador.html
+++ b/templates/template_mirador.html
@@ -107,8 +107,8 @@
                     "fullScreenViewer": true,
                     "userButtons": [
                         {
-                            "label": '<i18n:text key="toWorksOverview"/>',
-                            "iconClass": "fa fa-arrow-left",
+                            "label": '<i18n:text key="worksList"/>',
+                            "iconClass": "fa fa-th-list",
                             "attributes": {
                                 "id": "works",
                                 "aria-hidden": "true",
