Omit document icons and expand titles a bit.

--- a/templates/template_works.html
+++ b/templates/template_works.html
@@ -75,7 +75,7 @@
                                             '&lt;p class="watermark-wip-text"&gt;<i18n:text key="workInProgress">Work in Progress!</i18n:text>&lt;/p&gt;' +
                                         '&lt;% } %&gt;' +
                                         '&lt;p class="lead"&gt;' +
-                                            '&lt;a href="&lt;%= obj.monoMultiUrl %&gt;"&gt;&lt;span class="glyphicon glyphicon-file"&gt;&lt;/span&gt;&lt;span class="work-title"&gt;&lt;% if (obj.title) {  %&gt;&lt;%= obj.title %&gt;&lt;% } %&gt; &lt;/span&gt;&lt;/a&gt;' +
+                                            '&lt;a href="&lt;%= obj.monoMultiUrl %&gt;"&gt;&lt;span class="work-title"&gt;&lt;% if (obj.title) {  %&gt;&lt;%= obj.title %&gt;&lt;% } %&gt; &lt;/span&gt;&lt;/a&gt;' +
                                             '&lt;/br&gt;' +
                                             '&lt;span&gt;&lt;% if (obj.name) {  %&gt;&lt;%= obj.name %&gt;&lt;% } %&gt;&lt;/span&gt;' + 
                                         '&lt;/p&gt;' +
