--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -468,6 +468,11 @@ a .edited, a .expan, a .reg, a .corr{
     font-size: 1.25em;
     top: 0.10em;
 }
+
+.inlist-head {
+    font-size:1.1em !important;
+}
+
 .navbar .glyphicon {
     font-size: 1em;
 }
