Add filter option 'Full text' vs. 'Facsimiles'.

--- a/templates/template_works.html
+++ b/templates/template_works.html
@@ -106,10 +106,11 @@
                         settings = { 
                           items            : works_items,
                           facets           : { 
-                                                'nameFacet'       : '<span data-template="app:switchAuthor"/>',
-                                                'chronology'      : '<span data-template="app:switchYear"/>',
-                                                'textLanguage'    : '<span data-template="app:switchLanguage"/>',
-                							         'facetPlace'	      : '<span data-template="app:switchPrintingPlace"/>'
+                                                'nameFacet'         : '<span data-template="app:switchAuthor"/>',
+                                                'chronology'        : '<span data-template="app:switchYear"/>',
+                                                'textLanguage'      : '<span data-template="app:switchLanguage"/>',
+                							    'facetPlace'	    : '<span data-template="app:switchPrintingPlace"/>',
+                                                'facetAvailability' : '<span data-template="app:switchAvailability"/>' 
                                               },
                             resultSelector   : '#results',
                             facetSelector    : '#facets',
