--- a/templates/template_lemmata.html
+++ b/templates/template_lemmata.html
@@ -14,7 +14,7 @@
         
         <!--  ==== Custom styles for this template ==== -->
         <link rel="stylesheet" type="text/css" href="resources/css/style_default.css"/>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
         <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/>
         
         <!-- ==== favIcon ==== -->
