--- a/templates/template_mirador.html
+++ b/templates/template_mirador.html
@@ -145,7 +145,7 @@
                         },
                         {
                             "label": '<i18n:text key="legalShort"/>',
-                            "iconClass": "fa fa-lock",
+                            "iconClass": "fa fa-balance-scale",
                             "attributes": {
                                 "id": "legal",
                                 "aria-hidden": "true",
