--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/style_work.css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/jquery-ui-1.10.4.custom.css"/>
-        <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
         <!--<link rel="stylesheet" type="text/css" href="resources/css/jquery.treeview.css"/>-->
         <link rel="stylesheet" type="text/css" href="resources/css/jsTree.css"/>
         <link rel="stylesheet" type="text/css" href="resources/css/tooltipster.css"/>
@@ -446,7 +446,7 @@
         /**
          * JavaScript Get URL Parameter
          *
-         * @param String prop The specific URL parameter you want to retreive the value for
+         * @param String prop The specific URL parameter you want to retrieve the value for
          * @return String|Object If prop is provided a string value is returned, otherwise an object of all properties is returned
          */
         function getUrlParams( prop ) {
