--- a/templates/template_works.html
+++ b/templates/template_works.html
@@ -9,12 +9,12 @@
         <link rel="canonical" data-template="config:canonical-url"/>
         <link rel="alternative" data-template="config:hreflang-url"/>
         
-        <!-- ==== Bootsrap CSS!  ==== -->
+        <!-- ==== Bootstrap CSS  ==== -->
         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
         
         <!--  ==== Custom styles for this template  ==== -->
         <link rel="stylesheet" type="text/css" href="resources/css/style_default.css"/>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
         <link rel="stylesheet" type="text/css" href="resources/css/backTop.css"/>
         
         <!-- ==== favIcon ==== -->
@@ -93,9 +93,9 @@
                                   		    '&lt;a class="workVolume" href="&lt;%= obj.vol7 %&gt;"&gt;&lt;%= obj.vol7Cont %&gt;&lt;/a&gt;' +
                                   		    '&lt;a class="workVolume" href="&lt;%= obj.vol8 %&gt;"&gt;&lt;%= obj.vol8Cont %&gt;&lt;/a&gt;' +
                                         '&lt;/p&gt;' +
-                              		    '&lt;a title="&lt;%=obj.facsAttrib %&gt;" class="workImages pull-right" target="_blank" rel="noopener noreferrer" href="&lt;%= obj.workImages %&gt;"&gt;&lt;i class="fa fa-file-text-o" &gt;&lt;/i&gt; &lt;%=obj.facsAttrib %&gt;&lt;/a&gt;' +
+                              		    '&lt;a title="&lt;%=obj.facsAttrib %&gt;" class="workImages pull-right" target="_blank" rel="noopener noreferrer" href="&lt;%= obj.workImages %&gt;"&gt;&lt;i class="fas fa-book-open" &gt;&lt;/i&gt; &lt;%=obj.facsAttrib %&gt;&lt;/a&gt;' +
                                         '&lt;br/&gt;' +
-                                        '&lt;a title="&lt;%=obj.titAttrib %&gt;" class="workDetails pull-right" href="&lt;%= obj.workDetails %&gt;"&gt;&lt;i class="fa fa-file-text-o" &gt;&lt;/i&gt; &lt;%=obj.titAttrib %&gt;&lt;/a&gt;' +
+                                        '&lt;a title="&lt;%=obj.titAttrib %&gt;" class="workDetails pull-right" href="&lt;%= obj.workDetails %&gt;"&gt;&lt;i class="fas fa-file-alt" &gt;&lt;/i&gt; &lt;%=obj.titAttrib %&gt;&lt;/a&gt;' +
                               		    '&lt;a style="display: none;"  &gt;&lt;%= obj.sortName %&gt;&lt;/a&gt;' +
                                     '&lt;/div&gt;' +
                                 '&lt;/div&gt;' + 
