--- a/resources/css/style_default.css
+++ b/resources/css/style_default.css
@@ -732,7 +732,7 @@ border:none
  * - fa fa-info-circle
  * - fa fa-list-ul
  * - fa fa-balance-scale
- * - fa fa-pencil-alt
+ * - fas fa-pencil-alt
  * - fa fa-plus
  * - fa fa-question-circle
  * - fa fa-reply
